# crypto-signal-autopsy-v1

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
crypto_signal_autopsy/: __init__.py  analysis_tables.py  api_birdeye.py  api_moralis.py  baselines.py  cli.py  config.py  daemon.py  dashboard.py  db.py  export.py  filters.py  normalize.py  quant_analytics.py  review.py  scan.py  scoring.py  static_site.py  timeutils.py  track.py  ux_recovery.py  v2_dashboard.py  wallet_discovery.py  wallet_exports.py  wallet_scoring.py  wallet_signals.py
data/: autopsy.sqlite
docs/: index.html
exports/: accepted_failure_diagnosis.csv  api_events.csv  baseline_comparisons.csv  category_performance.csv  dashboard_summary.csv  data_quality_report.csv  delayed_entry_simulator.csv  filter_accuracy.csv  filter_blocked_winners.csv  filter_results.csv  filter_saved_us.csv  missed_winner_review.csv  outcome_snapshots.csv  outcomes.csv  outliers.csv  pairs.csv  paper_trades.csv  rejected_filter_audits.csv  rejected_outcomes.csv  rejections.csv  score_bucket_performance.csv  security_checks.csv  signals.csv  social_catalysts.csv  suspicious_wallets.csv  ten_x_failure_review.csv  tokens.csv  tradable_candidates.csv  ux_blank_input_events.csv  wallet_activity_feed.csv  wallet_clusters.csv  wallet_leaderboard.csv  wallet_performance.csv  wallet_reputation_memory.csv  wallet_token_signals.csv  wallet_trades.csv  wallets.csv  winner_loser_dna.csv  winner_survival_lab.csv
tests/: test_analysis_tables.py  (+13 more)
(+34 files in other folders)
