[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-signal-autopsy"
version = "0.1.0"
description = "Tiny deterministic crypto signal autopsy system for paper-tracking public signals against baselines."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "streamlit>=1.37",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
csa = "crypto_signal_autopsy.cli:main"

[tool.setuptools.packages.find]
include = ["crypto_signal_autopsy*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
